计算右侧小于当前元素的个数 (Count of Smaller Numbers After Self)